fixed mobile spacing

--- a/styles.css
+++ b/styles.css
@@ -35,12 +35,12 @@ body{
 h1{
   color: var(--textcolor);
   font-weight: normal;
-  font-size: 2.5em;
+  font-size: 2em;
 }
 h2{
   color: var(--textcolor);
   font-weight: normal;
-  line-height: 2em;
+  line-height: 1.7em;
 }
 h2{
   color: var(--textcolor);
@@ -57,7 +57,7 @@ p,a,li{
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   box-sizing: border-box;
-  gap: 10px;
+  gap: 15px;
 }
 .title{
   margin: 0 10px;
@@ -65,7 +65,6 @@ p,a,li{
 .title img{
   grid-column: span 2;
   width: 100%;
-  max-width:300px;
   text-align: right;
 }
 .title h1{
@@ -79,11 +78,11 @@ p,a,li{
   color: transparent;
 }
 #welcome{
-  padding: 0 20px 20px 20px;
+  padding: 0 10px 10px 10px;
   font-size: 1.1em;
 }
 #portfolio{
-  padding: 30px 20px;
+  padding: 10px 10px;
 }
 #portfolio h2{
   margin-bottom: 0;
@@ -94,7 +93,7 @@ p,a,li{
 }
 .projects img{
   grid-column: span 2;
-  width: 100px;
+  width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
